- FIX: Fixed issues with searching json columns. - CHG: Version bump for bugfix release.