@@ -2,6 +2,7 @@ package jhi.germinate.server.resource;
 
 import jhi.germinate.resource.Filter;
 import jhi.germinate.server.util.*;
+import jhi.germinate.server.util.jooq.GDSL;
 import org.jooq.*;
 import org.jooq.Record;
 import org.jooq.impl.DSL;
@@ -189,9 +190,8 @@ public interface IFilteredResource
 				{
 					List<Condition> conditions = values.stream()
 													   .filter(v -> !StringUtils.isEmpty(v))
-													   .map(v -> v.replaceAll("[^a-zA-Z0-9_-]", "")) // Replace all non letters and numbers
-													   .map(v -> DSL.condition("JSON_SEARCH(LOWER(" + field.getName() + "), 'one', LOWER('%" + v + "%')) IS NOT NULL"))
-													   .collect(Collectors.toList());
+													   .map(v -> GDSL.jsonSearch(v, field).isNotNull())
+													   .toList();
 
 					Condition result = conditions.get(0);
 
@@ -211,9 +211,8 @@ public interface IFilteredResource
 				if (jsonOperationAllowed)
 				{
 					List<Condition> conditions = values.stream()
-													   .map(v -> v.replaceAll("[^a-zA-Z0-9_-]", "")) // Replace all non letters and numbers
-													   .map(v -> DSL.condition("JSON_CONTAINS(" + field.getName() + ", '" + v + "')"))
-													   .collect(Collectors.toList());
+													   .map(v -> GDSL.jsonContains(v, field))
+													   .toList();
 
 					Condition result = conditions.get(0);
 
